# GameProjectV2

./: CMakeLists.txt  README.md
include/Game/Components/: Stats.h
include/Game/Core/: Game.h
include/Game/Entities/: Character.h
include/Game/Managers/: CharacterManager.h  StateManager.h
include/Game/States/: CharacterCreationState.h  CharacterLoadingState.h  CharacterMenuState.h  ExitState.h  InGameState.h  MainMenuState.h  State.h
src/: main.cpp
src/Game/Components/: Stats.cpp
src/Game/Core/: Game.cpp
src/Game/Entities/: Character.cpp
src/Game/Managers/: CharacterManager.cpp  StateManager.cpp
src/Game/States/: CharacterCreationState.cpp  CharacterLoadingState.cpp  CharacterMenuState.cpp  ExitState.cpp  InGameState.cpp  MainMenuState.cpp  State.cpp
tests/: CharacterCreationStateTest.cpp  CharacterManagerTest.cpp  CharacterTest.cpp  ExitStateTest.cpp  GameTest.cpp  GameTestIntegration.cpp  MainMenuStateTest.cpp  StateManagerTest.cpp  StatsTest.cpp
